Suite de l'authentification et début d'écriture des pages responsive. Ajout des répertoires BackEnd et FrontEnd.

--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ APP_SECRET=
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 
 # VM vagrant 02042025 : DATABASE_URL="mysql://root:root@127.0.0.1/compte_client?serverVersion=10.3.39-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:root@127.0.0.1/compte_client?serverVersion=10.3.39-MariaDB&charset=utf8mb4"
-# DATABASE_URL="mysql://root:@127.0.0.1/compte_client?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
+# Mis en commentaire le 28/04/2025 DATABASE_URL="mysql://root:root@127.0.0.1/compte_client?serverVersion=10.3.39-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1/compte_client?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
