--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    uploads_directory: '%kernel.project_dir%/public/uploads'
+    app.private_upload_dir: '%kernel.project_dir%/var/storage'
 
 services:
     # default configuration for services in *this* file
@@ -23,7 +23,7 @@ services:
 
     App\Service\FileUploader:
         arguments:
-            $targetDirectory: '%uploads_directory%'
+            $privateStorageDir: '%app.private_upload_dir%'
 
 
     # add more service definitions when explicit configuration is needed
