--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/yaml": "7.2.*",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.20",
+        "twig/intl-extra": "^3.21",
         "twig/twig": "^2.12|^3.20"
     },
     "config": {
