--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,12 @@
 twig:
     file_name_pattern: '*.twig'
+    
     form_themes: [ 'bootstrap_5_layout.html.twig' ]
+
+    default_path: '%kernel.project_dir%/templates'
+
+    globals:
+        locale: 'fr'
 
 when@test:
     twig:
