--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,10 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    App\Utils\Tracer:
+        arguments:
+            $filename: 'var/log/debug-trace.txt'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
