--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^3.3.2",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.1",
+        "setasign/fpdf": "^1.8",
         "symfony/apache-pack": "^1.0.1",
         "symfony/asset": "7.2.*",
         "symfony/asset-mapper": "7.2.*",
