Commencé à réorganiser les use. Test en prod pour page '404.html.twig', ça ne fonctionne pas. Fin d'ajout de la barre de nav pour l'administrateur.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,7 +14,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    App\Utils\Tracer:
+    App\Outils\Tracer:
         arguments:
             $filename: 'var/log/debug-trace.txt'
 
