--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -8,6 +8,10 @@ twig:
     globals:
         locale: 'fr'
 
+    # Doit être désactivé (null) pour que les templates prennent le dessus
+    exception_controller: null
+
 when@test:
     twig:
         strict_variables: true
+
