Tentatives de 404.html.twig et de Fixtures.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -9,7 +9,7 @@ twig:
         locale: 'fr'
 
     # Doit être désactivé (null) pour que les templates prennent le dessus
-    exception_controller: null
+    #exception_controller: null
 
 when@test:
     twig:
